fixing spacing on about page text.

--- a/css/style.css
+++ b/css/style.css
@@ -528,6 +528,7 @@ img.about {
 
 #about, .inner {
   margin-bottom: 200px;
+  padding-top: 40px;
 }
 /* Resume */
 
